Fix for sign-out modal on mobile for slow phones, css tweaks for scrolling when nav is open.

--- a/app/styles/common/_header.scss
+++ b/app/styles/common/_header.scss
@@ -559,6 +559,7 @@
     left: -80vw;
     z-index: 1;
     > ul {
+      padding-bottom: 80px;
       margin: 0 -15px;
     }
 
@@ -589,7 +590,7 @@
 
   body.menu-open {
     width: 100vw;
-    overflow: hidden;
+    height: 100vh;    
 
     .hamburger {
       background-color: transparent;
@@ -606,10 +607,9 @@
     }
 
     #wrapper {
-
-      height: -webkit-calc(100vh - 68px);
-      height:    -moz-calc(100vh - 68px);
-      height:         calc(100vh - 68px);
+      height: 100vh;
+      width: 100vw;
+      overflow: hidden;
     }
 
     #main-container,
